# build_system_experiment

./: .gitignore  DEMO.md  NOTE.md  QUESTIONS.md  README.md  TODO.md  testAll.cmd  testAllMac.sh  testAllWindows.cmd  testCmd.cmd  testGN.cmd  testNinja.cmd  test_all_mac.sh  test_all_win.cmd
project/: .gn  BUILD.gn  README.md  build.cmd  build.sh  build_cs.cmd  gbuild.cmd  my_variant
project/build-gn/: BUILDCONFIG.gn
project/build-gn/mac/toolchain/gcc/: BUILD.gn
project/build-ninja/osx/: build.ninja
project/config/: default_config.ini
project/src/: BUILD.gn  HelloWorld.cpp
project/src/buildtool/: BUILD.gn
project/src/buildtool/rpc_generator/: BUILD.gn  rpc_generator.gni
project/src/buildtool/rpc_generator/src/: main.cpp
project/src/hello_world/: BUILD.gn  main.cpp
project/src/hello_world_cs/: BUILD.gn
project/src/hello_world_cs/tool_cli/: BUILD.gn  Program.cs
project/src/hello_world_cs/tool_lib/: BUILD.gn  Tool.cs
project/src/hello_world_cs/tool_ui/: BUILD.gn  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  compile_xaml.csproj
project/src/runtime/: BUILD.gn
project/src/runtime/data/textures/: BUILD.gn
project/src/runtime/engine/: BUILD.gn
project/src/runtime/engine/include/drgn/: Config.h  Engine.h
project/src/runtime/engine/src/: Config.cpp  Engine.cpp
project/src/runtime/runtime_app/: BUILD.gn
project/src/runtime/runtime_app/src/: main.cpp
project/src/runtime/shaders/: BUILD.gn  default.hlsl
project/src/runtime/shaders/system/: post_process.hlsl  system.hlsl
project/src/schema/: BUILD.gn  assets.schema  calculator.schema  calculator_service.schema
project/src/schema/include/: data_type.schema  vector_type.schema
project/src/tool/: BUILD.gn
project/src/tool/asset_converter/: BUILD.gn  main.cpp
project/src/tool/shader_compiler/: BUILD.gn  main.cpp  shader_compiler.gni
project/src/tool/texture_compiler/: BUILD.gn  texture_compiler.gni
project/src/tool/texture_compiler/src/: main.cpp
project/src/tool/texture_converter/: BUILD.gn
project/src/tool/texture_converter/src/: main.cpp
project/src/tool/tool_cli/: BUILD.gn
project/src/tool/tool_cli/Properties/: AssemblyInfo.cs
project/src/tool/tool_lib/: BUILD.gn  Tool.cs
project/src/tool/tool_lib/Properties/: AssemblyInfo.cs
project/src/tool/tool_ui/: BUILD.gn  MainWindow.xaml.cs  Program.cs
test/mac/: testGN.sh  testNinja.sh  test_bash.sh  test_gn.sh  test_ninja.sh
test/win/: test_cmd.cmd  test_gn.cmd  test_ninja.cmd
test/windows/: testGN.cmd  testNinja.cmd
