group("runtime") {
  deps = [
    "//src/hello_world",
    "//src/runtime/runtime_app"
  ]
}

if (is_mac) {
  group("default") {
    deps = [
      "//:runtime($mac_toolchain)",
      "//:runtime($mac_gcc_toolchain)",
    ]
  }
} else if (is_win) {
  group("default") {
    deps = [
      "//:runtime($win_toolchain)",
      "//:runtime($win_x86_toolchain)",
    ]
  }
}