runtime_targets = [
  "engine",
  "runtime_app",
]

# compile runtime target for every toolchains
group("runtime") {
  deps = []
  foreach(t, runtime_toolchains) {
    _toolchain = t[1]
    foreach(target, runtime_targets) {
      deps += [
        "$target($_toolchain)",
      ]
    }
  }
}

group("runtime_data") {
  deps = [
    "shaders",
    "data/textures",
  ]
}