import("//src/buildtool/rpc_generator/rpc_generator.gni")

compile_schema("calculator") {
    sources = [
        "calculator.schema"
    ]
    output_path = "drgn/generated"
    is_service = true
}

compile_schema("assets") {
    sources = [
        "assets.schema"
    ]
    output_path = "drgn/generated"
}