csharp_assembly("tool_lib") {
  cs_system_references = [
    "System",
    "System.Core",
    "System.Xml.Linq",
    "System.Data.DataSetExtensions",
    "Microsoft.CSharp",
    "System.Data",
    "System.Net.Http",
    "System.Xml",
  ]

  assembly_type = "library"
  sources = [
      "Properties/AssemblyInfo.cs",
      "Tool.cs",
  ]
}