import("//build/gn/target/runtime.gni")

config("engine_config") {
  include_dirs = [
      "include"
  ]
}

runtime_library("engine") {
  sources = [
    "include/drgn/Config.h",
    "include/drgn/Engine.h",
    "src/Config.cpp",
    "src/Engine.cpp",
  ]
  all_dependent_configs = [
    ":engine_config"
  ]
  deps = [
    "//src/schema:calculator_service",
  ]
}