import("//build/gn/target/tool.gni")

config("tool_cli_config") {
  cs_system_references = [
    "System",
    "System.Core",
    "System.Xml.Linq",
    "System.Data.DataSetExtensions",
    "Microsoft.CSharp",
    "System.Data",
    "System.Net.Http",
    "System.Xml",
  ]
}

cs_tool_executable("tool_cli") {
  configs = [
    ":tool_cli_config",
  ]
  sources = [
      "Properties/AssemblyInfo.cs",
      "Program.cs",
  ]
  deps = [
    "//src/tool/tool_lib"
  ]
}