import("//build/gn/target/tool.gni")

cs_tool_library("tool_lib") {
  cs_system_references = [
    "System",
    "System.Core",
    "System.Xml.Linq",
    "System.Data.DataSetExtensions",
    "Microsoft.CSharp",
    "System.Data",
    "System.Net.Http",
    "System.Xml",
  ]

  sources = [
      "Properties/AssemblyInfo.cs",
      "Tool.cs",
  ]
}