import("//build/gn/target/tool.gni")

cs_tool_executable("tool_ui") {
  cs_system_references = [
    "System",
    "System.Core",
    "System.Xml.Linq",
    "System.Data.DataSetExtensions",
    "Microsoft.CSharp",
    "System.Data",
    "System.Net.Http",
    "System.Xml",
    "System.Xaml",
    "WindowsBase",
    "PresentationCore",
    "PresentationFramework",
  ]

  sources = [
      "Properties/AssemblyInfo.cs",
      "Program.cs",
      "MainWindow.xaml.cs",
      "MainWindow.xaml",
      "image.png",
  ]
  deps = [
    "//src/tool/tool_lib",
    "//src/schema:cs_calculator",
  ]
}